@@ -1,0 +1,25 @@
+AM_CPPFLAGS = \
+    -DGNOMELOCALEDIR=\""$(datadir)/locale"\" 	\
+    -I$(top_srcdir)/src	-I$(top_builddir)/src	\
+    $(GNUMERIC_CFLAGS)
+
+gnumeric_plugin_fnfltdir = $(gnumeric_plugindir)/fn-flt
+xmldir = $(gnumeric_plugin_fnfltdir)
+gnumeric_plugin_fnflt_LTLIBRARIES = plugin.la
+plugin_la_LDFLAGS = -module $(GNUMERIC_PLUGIN_LDFLAGS)
+plugin_la_SOURCES = functions.c
+
+xml_in_files = plugin.xml.in
+xml_DATA = $(xml_in_files:.xml.in=.xml)
+
+pofiles = $(wildcard $(top_srcdir)/po/*.po) $(wildcard $(top_srcdir)/po-functions/*.po)
+
+plugin.xml: plugin.xml.in $(pofiles)
+	LC_ALL=C $(INTLTOOL_MERGE) -x -u -c $(top_builddir)/po/.intltool-merge-cache $(top_srcdir)/po $< $@.tmp
+	@PERL@ -pi -e "s/VERSION/${VERSION}/" $@.tmp
+	mv $@.tmp $@
+
+@INTLTOOL_XML_RULE@
+
+EXTRA_DIST = $(xml_in_files)
+CLEANFILES = $(xml_DATA)
